--- a/imdbScrap/QARobot.csproj
+++ b/imdbScrap/QARobot.csproj
@@ -85,12 +85,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActorScraper.cs" />
-    <Compile Include="CookieProfile.cs" />
     <Compile Include="DatabaseQuery.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scraper.cs" />
-    <Compile Include="UserAgent.cs" />
+    <Compile Include="ProfileManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
